fixed bootstrap collapse issue

--- a/style.css
+++ b/style.css
@@ -5,19 +5,23 @@ body {
 
 .jumbotron.container-fluid {
     height: 200px;
-    max-width: 100%;
     text-align: center;
     background: url('images/header-banner.png');
-    background-position: top;
-    background-size: auto;
+    background-position: bottom;
+    background-size: contain;
     background-repeat: no-repeat;
+    display: block;
+    margin: 0;
+    padding-bottom: 0;
+        
 }
 
 p {
-    font-size: 2em;
+    font-size: 1.7em;  
     font-weight: 300;
     line-height: 1.7em;
     color: #999;
+    text-shadow: 2px 2px 2px black;
 }
 
 
@@ -52,7 +56,7 @@ p {
 #sidebar ul p {
     padding-left: 2%;
     color: whitesmoke;
-    text-shadow: 2px 2px 8px black;
+    text-shadow: -4px 4px -1px black;
     padding: 10px;
 }
 
@@ -68,7 +72,9 @@ p {
 ----------------------------------------------------- */
 .container {
     height: 100%;
-    width: 100%;
+    padding-bottom: 3%;
+    padding-left: 0;
+    margin-left: 1%;
 }
 
 .face, .back {
@@ -84,21 +90,17 @@ p {
 }
 
 .row {
-    width: 95%;
+    width: 70%;
 }
 
-.card {
-    height: 10%;
-    width: 10%;
-    float: left;
-    padding: 4%;
+.columns {
+    padding: 0;
 }
-
 .card-block {
     height: 200px;
     width: 200px;
-    top: 10%;
-    left: 10%;
+    top: 1%;
+    left: 1%;
     bottom: 5%;
     position: relative;
     padding: 1%;
@@ -121,16 +123,13 @@ p {
     pointer-events: none;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1140px) {
     p {
-        font-size: 1.5em;
-        font-weight: 300;
-        line-height: 1.7em;
-        color: #999;
+        font-size: 1.4em;  
     }
     .card-block {
-        height: 150px;
-        width: 150px;
+        height: 165px;
+        width: 165px;
         top: 10%;
         left: 10%;
         bottom: 5%;
@@ -138,16 +137,19 @@ p {
         padding: 1%;
     }
     .back .card-img {
-        height: 150px;
-        width: 150px;
+        height: 165px;
+        width: 165px;
         padding: 1%;
     }
 }
 
 @media screen and (max-width: 960px) {
+    p {
+        font-size: 1em;  
+    }
     .card-block {
-        height: 150px;
-        width: 150px;
+        height: 128px;
+        width: 128px;
         top: 10%;
         left: 10%;
         bottom: 5%;
@@ -155,18 +157,18 @@ p {
         padding: 1%;
     }
     .back .card-img {
-        height: 150px;
-        width: 150px;
+        height: 128px;
+        width: 128px;
         padding: 1%;
     }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 720px) {
     p {
-        font-size: 1.2em;
-        font-weight: 300;
-        line-height: 1.7em;
-        color: #999;
+        font-size: 0.8em;  
+    }
+    .jumbotron.container-fluid {
+        height: 150px;
     }
     .card-block {
         height: 100px;
@@ -180,6 +182,26 @@ p {
     .back .card-img {
         height: 100px;
         width: 100px;
+        padding: 1%;
+    }
+}
+
+@media screen and (max-width: 540px) {
+    p {
+        font-size: 0.6em;  
+    }
+    .card-block {
+        height: 72px;
+        width: 72px;
+        top: 10%;
+        left: 10%;
+        bottom: 5%;
+        position: relative;
+        padding: 1%;
+    }
+    .back .card-img {
+        height: 72px;
+        width: 72px;
         padding: 1%;
     }
 }
